--- a/contact.html
+++ b/contact.html
@@ -76,8 +76,8 @@
       <a href="mailto:support@example.com" class="support-btn email-btn">
         📧 Send us an e-mail
       </a>
-      <a href="tel:18889028362" class="support-btn call-btn">
-        📞 1 (888) 902-8362
+      <a href="tel:+18339507247" class="support-btn call-btn">
+        📞 +1-833-950-7247
       </a>
     </div>
   </div>
